test2-2023-05-24.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.0065 seconds

  ----Wall Time----  ----Name----
    1.0050 ( 99.8%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    0.9357 ( 93.0%)    Parse modules
    0.0015 (  0.2%)  Rest
    1.0065 (100.0%)  Total

{
  totalTime: 1.017,
  maxMemory: 161976320
}
